--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,12 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.13.0",
+    "file-loader": "^0.9.0",
+    "immutable": "^3.8.1",
     "react": "^15.3.1",
     "react-loader": "^2.4.0",
     "react-router": "^2.7.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   }
